# bats

./: Cargo.toml
src/: lib.rs  main.rs  plugins.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  plugins.rs  settings.rs
src-web/: package-lock.json  package.json  tailwind.config.js  vite.config.js
src-web/src/: App.jsx  index.jsx
src-web/src/components/: Sidebar.jsx  StatusBar.jsx
src-web/src/components/mainDisplay/: MainDisplay.jsx  PluginDetail.jsx  PluginsTable.jsx  index.js
src-web/src/components/sidebar/: PluginList.jsx  ScriptList.jsx  Sidebar.jsx  SidebarItem.jsx
